# Game_of_life

life_game/: CMakeLists.txt  barrier.h  grid.h  main.cpp  master.cpp  master.h  slave.cpp  slave.h  stuff.h
life_game_OMP/: CMakeLists.txt  grid.cpp  grid.h  master.cpp  master.h
